[lworld] C2 compilation fails with assert(projs->fallthrough_proj != __null) failed: must be found

XMLWordPrintable

      # Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/callnode.cpp:969), pid=5239, tid=5253
      # assert(projs->fallthrough_proj != __null) failed: must be found

      Current CompileTask:
      C2: 749 164 ! Test::mainTest (761 bytes)

      Stack: [0x00007fbe70c03000,0x00007fbe70d04000], sp=0x00007fbe70cff2c0, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x835c3a] CallNode::extract_projections(bool, bool)+0x99a
      V [libjvm.so+0x8399d5] AllocateNode::Ideal(PhaseGVN*, bool)+0x95
      V [libjvm.so+0x1554960] PhaseIterGVN::transform_old(Node*)+0xb0
      V [libjvm.so+0x154ea2c] PhaseIterGVN::optimize()+0x8c
      V [libjvm.so+0x9fd69f] Compile::Optimize()+0x57f
      V [libjvm.so+0x9ff249] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x10b9
      V [libjvm.so+0x8217bd] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
      V [libjvm.so+0xa0b904] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x334
      V [libjvm.so+0xa0c958] CompileBroker::compiler_thread_loop()+0x4f8
      V [libjvm.so+0x18d14f6] JavaThread::thread_main_inner()+0x1b6
      V [libjvm.so+0x18d6bb6] Thread::call_run()+0xf6
      V [libjvm.so+0x14a5e2e] thread_native_entry(Thread*)+0x10e

        1. hs_err_pid5239.log
          81 kB
        2. replay_pid5239.log
          170 kB
        3. Test.java
          11 kB

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: