8230397: [lworld] C2 compilation fails with assert(projs->fallthrough_proj != __null) failed: must be found