src/hotspot/share/opto/callnode.cpp
@@ -966,8 +966,8 @@ CallProjections* CallNode::extract_projections(bool separate_io_proj, bool do_as
   // The resproj may not exist because the result could be ignored
   // and the exception object may not exist if an exception handler
   // swallows the exception but all the other must exist and be found.
-  assert(projs->fallthrough_proj      != NULL, "must be found");
   do_asserts = do_asserts && !Compile::current()->inlining_incrementally();
+  assert(!do_asserts || projs->fallthrough_proj      != NULL, "must be found");
   assert(!do_asserts || projs->fallthrough_catchproj != NULL, "must be found");
   assert(!do_asserts || projs->fallthrough_memproj   != NULL, "must be found");
   assert(!do_asserts || projs->fallthrough_ioproj    != NULL, "must be found");
